--- a/watch=uM64wr4tG.html
+++ b/watch=uM64wr4tG.html
@@ -186,7 +186,7 @@
 
         function copyToClipboard() {
             const dummyElement = document.createElement('textarea');
-            dummyElement.value = 'https://denjialt.github.io/ytp/watch=uM64wr4tG.html'; // Replace with the actual site's address
+            dummyElement.value = 'https://denjialt.github.io/ytp/watch=uM64wr4tG'; // Replace with the actual site's address
             document.body.appendChild(dummyElement);
             dummyElement.select();
             document.execCommand('copy');
