--- a/watch=3fAda76Cas.html
+++ b/watch=3fAda76Cas.html
@@ -217,7 +217,7 @@
     <img src="ytp.png" class="ytp" draggable="false">
     <div class="title">LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)</div>
     <div class="channelname">Logan paul clips</div>
-    <img src="icon.png" class="pfp" draggable="false">
+    <img src="unnamed (1).jpg" class="pfp" draggable="false">
     <div class="subs">76 subscribers</div>
     <button onclick="toggleSubscription()" class="butt">
         <div class="d-letter">d</div>
@@ -235,7 +235,7 @@
     </button>
     <a href="https://denjialt.github.io/ytp/watch=uM64wr4tG.html" class="blowoutbutton"></a>
     <b class="blowouttitle">LOGAN PAUL TWERKING!!
-        <div style="color: #a5a5a5; margin-top: 5%; width: 69%;">Logan paul clips</div>
+        <div style="color: #a5a5a5; margin-top: 5%; width: 69%;">fartmaster67</div>
         <div style="color: #a5a5a5"> 107 views · 1 year ago</div>
     </b>
     <img src="twerk thumbnail.png" class="thumbnailblowout" draggable="false">
