--- a/watch=3fAda76Cas.html
+++ b/watch=3fAda76Cas.html
@@ -52,6 +52,7 @@
             height: 4%;
             margin-top: 30%;
             margin-right: 47%;
+            border-radius: 100px;
         }
 
         .subs {
@@ -236,7 +237,7 @@
     <a href="https://denjialt.github.io/ytp/watch=uM64wr4tG.html" class="blowoutbutton"></a>
     <b class="blowouttitle">LOGAN PAUL TWERKING!!
         <div style="color: #a5a5a5; margin-top: 5%; width: 69%;">fartmaster67</div>
-        <div style="color: #a5a5a5"> 107 views · 1 year ago</div>
+        <div style="color: #a5a5a5"> 34 views · 1 year ago</div>
     </b>
     <img src="twerk thumbnail.png" class="thumbnailblowout" draggable="false">
 </body>
