--- a/watch=uM64wr4tG.html
+++ b/watch=uM64wr4tG.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Shaking Logan Paul</title>
+    <meta content="LOGAN PAUL TWERKING!!" property="og:title" />
+    <meta content="fartmaster67" property="og:description" />
+    <meta content="https://denjialt.github.io/ytp/watch=uM64wr4tG" property="og:url" />
+    <meta content="https://cdn.discordapp.com/attachments/751413358531444766/1217163345740828744/New_Project_2.png?ex=660306b3&is=65f091b3&hm=b73b9b0bef478e3ef54e64ed533a35c9642dc39a404a33bc03dec81486b81aa5&" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <style>
         body {
             display: flex;
