--- a/watch=uM64wr4tG.html
+++ b/watch=uM64wr4tG.html
@@ -11,6 +11,7 @@
     <meta content="https://denjialt.github.io/ytp/watch=uM64wr4tG" property="og:url" />
     <meta content="https://cdn.discordapp.com/attachments/751413358531444766/1217163345740828744/New_Project_2.png?ex=660306b3&is=65f091b3&hm=b73b9b0bef478e3ef54e64ed533a35c9642dc39a404a33bc03dec81486b81aa5&" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
     <style>
         body {
             display: flex;
