--- a/watch=3fAda76Cas.html
+++ b/watch=3fAda76Cas.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaking Logan Paul</title>
+    <title>LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)</title>
+    <meta content="LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)" property="og:title" />
+    <meta content="Logan paul clips" property="og:description" />
+    <meta content="https://denjialt.github.io/ytp/watch=3fAda76Cas" property="og:url" />
+    <meta content="https://cdn.discordapp.com/attachments/751413358531444766/1217165763904012329/THMPNAIL_BLOWOUIT.png?ex=660308f3&is=65f093f3&hm=0bf706a4c3106a252386cb6d7e3c9a916107de08e35384eb26d8261f20ef6ce8&" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
     <style>
         body {
             display: flex;
@@ -234,7 +240,7 @@
     <button onclick="dislike()" class="dislike-button">
         <img src="like.png" class="dislike-png" draggable="false"/>
     </button>
-    <a href="https://denjialt.github.io/ytp/watch=uM64wr4tG.html" class="blowoutbutton"></a>
+    <a href="https://denjialt.github.io/ytp/watch=uM64wr4tG" class="blowoutbutton"></a>
     <b class="blowouttitle">LOGAN PAUL TWERKING!!
         <div style="color: #a5a5a5; margin-top: 5%; width: 69%;">fartmaster67</div>
         <div style="color: #a5a5a5"> 34 views · 1 year ago</div>
