--- a/watch=uM64wr4tG.html
+++ b/watch=uM64wr4tG.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Shaking Logan Paul</title>
+    <title>LOGAN PAUL TWERKING!!</title>
     <meta content="LOGAN PAUL TWERKING!!" property="og:title" />
     <meta content="fartmaster67" property="og:description" />
     <meta content="https://denjialt.github.io/ytp/watch=uM64wr4tG" property="og:url" />
@@ -240,7 +240,7 @@
     <button onclick="dislike()" class="dislike-button">
         <img src="like.png" class="dislike-png" draggable="false"/>
     </button>
-    <a href="https://denjialt.github.io/ytp/watch=3fAda76Cas.html" class="blowoutbutton"></a>
+    <a href="https://denjialt.github.io/ytp/watch=3fAda76Cas" class="blowoutbutton"></a>
     <b class="blowouttitle">LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)
         <div style="color: #a5a5a5; margin-top: 5%; width: 69%;">Logan paul clips</div>
         <div style="color: #a5a5a5"> 107 views · 1 year ago</div>
