--- a/watch=3fAda76Cas.html
+++ b/watch=3fAda76Cas.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)</title>
-    <meta content="LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)" property="og:title" />
-    <meta content="Logan paul clips" property="og:description" />
-    <meta content="https://denjialt.github.io/ytp/watch=3fAda76Cas" property="og:url" />
-    <meta content="https://cdn.discordapp.com/attachments/751413358531444766/1217165763904012329/THMPNAIL_BLOWOUIT.png?ex=660308f3&is=65f093f3&hm=0bf706a4c3106a252386cb6d7e3c9a916107de08e35384eb26d8261f20ef6ce8&" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-    <meta name="twitter:card" content="summary_large_image">
+    <title>Shaking Logan Paul</title>
     <style>
         body {
             display: flex;
@@ -22,60 +16,61 @@
         }
 
         .ass {
-            width: 50%; /* Adjust the width as needed */
-            height: 60%; /* Adjust the height as needed */
+            width: 940px; /* Adjust the width as needed */
+            height: 570px; /* Adjust the height as needed */
             margin-bottom: 150px; /* Adjust the bottom margin as needed */
             border-radius: 15px;
+            z-index: 200;
         }
 
         .title {
             position: absolute;
-            margin-top: 25%;
-            font-size: 150%;
-            margin-right: 30%;
-            left: 25%;
+            margin-top: 470px;
+            font-size: 140%;
+            margin-right: 130px;
+            width: 800px;
             font-family: Arial, Helvetica, sans-serif;
             text-align: left;
         }
 
         .ytp {
             position: absolute;
-            height: 20%;
-            margin-right: 85%;
-            margin-bottom: 40%;
+            height: 200px;
+            left: 40px;
+            top: 10px;
         }
 
         .channelname {
             position: absolute;
-            margin-top: 29.5%;
+            margin-top: 550px;
             font-size: 100%;
-            margin-right: 38.5%;
+            margin-right: 750px;
             font-family: Arial, Helvetica, sans-serif;
         }
 
         .pfp {
             position: absolute;
-            height: 4%;
-            margin-top: 30%;
-            margin-right: 47%;
+            height: 35px;
+            margin-top: 559px;
+            margin-right: 900px;
             border-radius: 100px;
         }
 
         .subs {
             position: absolute;
-            margin-top: 31%;
+            margin-top: 580px;
             font-size: 80%;
-            margin-right: 40.5%;
+            margin-right: 765px;
             font-family: Arial, Helvetica, sans-serif;
             color: #a5a5a5;
         }
 
         .butt {
             position: absolute;
-            height: 5%;
-            width: 10%;
-            margin-top: 28%;
-            margin-left: 35%;
+            height: 50px;
+            width: 200px;
+            margin-top: 520px;
+            margin-left: 680px;
             cursor: pointer;
         }
 
@@ -90,10 +85,10 @@
 
         .share-button {
             position: absolute;
-            height: 5%;
-            width: 2.5%;
-            margin-top: 28%;
-            margin-left: 4%;
+            height: 50px;
+            width: 46px;
+            margin-top: 530px;
+            margin-left: 90px;
             cursor: pointer;
         }
         .share {
@@ -106,10 +101,10 @@
         }
         .like-button {
             position: absolute;
-            height: 0%;
-            width: 0%;
-            margin-top: 29%;
-            margin-left: 14%;
+            height: 0px;
+            width: 0px;
+            margin-top: 540px;
+            margin-left: 250px;
             cursor: pointer;
         }
         .like-png {
@@ -121,10 +116,10 @@
         }
         .dislike-button {
             position: absolute;
-            height: 0%;
-            width: 0%;
-            margin-top: 28%;
-            margin-left: 20%;
+            height: 0px;
+            width: 0px;
+            margin-top: 530px;
+            margin-left: 360px;
             cursor: pointer;
         }
         .dislike-png {
@@ -146,29 +141,30 @@
         }
         .thumbnailblowout {
             position: absolute;
-            right: 12.6%;
-            height: 13%;
-            top: 13%;
+            margin-left: 1187px;
+            height: 120px;
+            margin-top: -573px;
             border-radius: 10px;
         }
         .blowoutbutton {
             position: absolute;
-            margin-bottom: 30.5%;
-            margin-left: 73%;
-            width: 22%;
+            margin-bottom: 570px;
+            margin-left: 1370px;
+            width: 413px;
             background-color: transparent;
             box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
             border: 0;
-            height: 14%;
+            height: 130px;
             cursor: pointer;
             z-index: 50;
+            border-radius: 8px;
         }
         .blowouttitle {
             position: absolute;
-            margin-top: -33%;
+            margin-top: -605px;
             font-size: 80%;
-            width: 10%;
-            left: 87.7%;
+            width: 150px;
+            margin-right: -1575px;
             font-family: Arial, Helvetica, sans-serif;
         }
     </style>
