--- a/watch=uM64wr4tG.html
+++ b/watch=uM64wr4tG.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>LOGAN PAUL TWERKING!!</title>
-    <meta content="LOGAN PAUL TWERKING!!" property="og:title" />
-    <meta content="fartmaster67" property="og:description" />
-    <meta content="https://denjialt.github.io/ytp/watch=uM64wr4tG" property="og:url" />
-    <meta content="https://cdn.discordapp.com/attachments/751413358531444766/1217163345740828744/New_Project_2.png?ex=660306b3&is=65f091b3&hm=b73b9b0bef478e3ef54e64ed533a35c9642dc39a404a33bc03dec81486b81aa5&" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-    <meta name="twitter:card" content="summary_large_image">
+    <title>Shaking Logan Paul</title>
     <style>
         body {
             display: flex;
@@ -23,59 +16,59 @@
         }
 
         .ass {
-            width: 50%; /* Adjust the width as needed */
-            height: 60%; /* Adjust the height as needed */
+            width: 940px; /* Adjust the width as needed */
+            height: 570px; /* Adjust the height as needed */
             margin-bottom: 150px; /* Adjust the bottom margin as needed */
             border-radius: 15px;
+            z-index: 200;
         }
 
         .title {
             position: absolute;
-            margin-top: 25%;
+            margin-top: 470px;
             font-size: 150%;
-            margin-right: 30%;
-            left: 25%;
+            margin-right: 630px;
             font-family: Arial, Helvetica, sans-serif;
             text-align: left;
         }
 
         .ytp {
             position: absolute;
-            height: 20%;
-            margin-right: 85%;
-            margin-bottom: 40%;
+            height: 200px;
+            left: 40px;
+            top: 10px;
         }
 
         .channelname {
             position: absolute;
-            margin-top: 29.5%;
+            margin-top: 550px;
             font-size: 100%;
-            margin-right: 40%;
+            margin-right: 750px;
             font-family: Arial, Helvetica, sans-serif;
         }
 
         .pfp {
             position: absolute;
-            height: 4%;
-            margin-top: 30%;
-            margin-right: 47%;
+            height: 35px;
+            margin-top: 559px;
+            margin-right: 900px;
         }
 
         .subs {
             position: absolute;
-            margin-top: 31%;
+            margin-top: 580px;
             font-size: 80%;
-            margin-right: 40.5%;
+            margin-right: 765px;
             font-family: Arial, Helvetica, sans-serif;
             color: #a5a5a5;
         }
 
         .butt {
             position: absolute;
-            height: 5%;
-            width: 10%;
-            margin-top: 28%;
-            margin-left: 35%;
+            height: 50px;
+            width: 200px;
+            margin-top: 520px;
+            margin-left: 680px;
             cursor: pointer;
         }
 
@@ -90,10 +83,10 @@
 
         .share-button {
             position: absolute;
-            height: 5%;
-            width: 2.5%;
-            margin-top: 28%;
-            margin-left: 4%;
+            height: 50px;
+            width: 46px;
+            margin-top: 530px;
+            margin-left: 90px;
             cursor: pointer;
         }
         .share {
@@ -106,10 +99,10 @@
         }
         .like-button {
             position: absolute;
-            height: 0%;
-            width: 0%;
-            margin-top: 29%;
-            margin-left: 14%;
+            height: 0px;
+            width: 0px;
+            margin-top: 540px;
+            margin-left: 250px;
             cursor: pointer;
         }
         .like-png {
@@ -121,10 +114,10 @@
         }
         .dislike-button {
             position: absolute;
-            height: 0%;
-            width: 0%;
-            margin-top: 28%;
-            margin-left: 20%;
+            height: 0px;
+            width: 0px;
+            margin-top: 530px;
+            margin-left: 360px;
             cursor: pointer;
         }
         .dislike-png {
@@ -146,29 +139,30 @@
         }
         .thumbnailblowout {
             position: absolute;
-            right: 12.6%;
-            height: 13%;
-            top: 13%;
+            margin-left: 1187px;
+            height: 120px;
+            margin-top: -573px;
             border-radius: 10px;
         }
         .blowoutbutton {
             position: absolute;
-            margin-bottom: 30.5%;
-            margin-left: 73%;
-            width: 22%;
+            margin-bottom: 570px;
+            margin-left: 1370px;
+            width: 413px;
             background-color: transparent;
             box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
             border: 0;
-            height: 14%;
+            height: 130px;
             cursor: pointer;
             z-index: 50;
+            border-radius: 8px;
         }
         .blowouttitle {
             position: absolute;
-            margin-top: -32%;
+            margin-top: -605px;
             font-size: 80%;
-            width: 10%;
-            left: 87.7%;
+            width: 150px;
+            margin-right: -1575px;
             font-family: Arial, Helvetica, sans-serif;
         }
     </style>
@@ -222,8 +216,8 @@
 <body>
     <img src="shake.gif" alt="Shaking Logan Paul" class="ass" draggable="false"/>
     <img src="ytp.png" class="ytp" draggable="false">
-    <div class="title">LOGAN PAUL TWERKING!!</div>
-    <div class="channelname">fartmaster67</div>
+    <b class="title">LOGAN PAUL TWERKING!!</b>
+    <b class="channelname">fartmaster67</b>
     <img src="icon.png" class="pfp" draggable="false">
     <div class="subs">3 subscribers</div>
     <button onclick="toggleSubscription()" class="butt">
@@ -232,7 +226,7 @@
         
     </button>
     <button onclick="copyToClipboard()" class="share-button">
-        <img src="share.png"class="share"/>
+        <img src="share.png"class="share" draggable="false"/>
     </button>
     <button onclick="like()" class="like-button">
         <img src="like.png" class="like-png" draggable="false"/>
