--- a/watch=uM64wr4tG.html
+++ b/watch=uM64wr4tG.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaking Logan Paul</title>
+    <title>LOGAN PAUL TWERKING!!</title>
+    <meta content="LOGAN PAUL TWERKING!!" property="og:title" />
+    <meta content="fartmaster67" property="og:description" />
+    <meta content="https://denjialt.github.io/ytp/watch=uM64wr4tG" property="og:url" />
+    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
     <style>
         body {
             display: flex;
