--- a/watch=3fAda76Cas.html
+++ b/watch=3fAda76Cas.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)</title>
-    <meta content="Embed Title" property="og:title" />
-    <meta content="Site Description" property="og:description" />
-    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="LOGAN PAUL MISSES THE TOILET AND MAKES A BIG MESS!! (GONE WRONG)" property="og:title" />
+    <meta content="Logan paul clips" property="og:description" />
+    <meta content="https://denjialt.github.io/ytp/watch=3fAda76Cas" property="og:url" />
+    <meta content="https://cdn.discordapp.com/attachments/751413358531444766/1218297648394539008/THMPNAIL_BLOWOUIT.png?ex=6607271a&is=65f4b21a&hm=14d09468eff2c376b6ebed2798e9830d3b0314efc3cb80566bbcf7b58b94107f&" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <meta name="twitter:card" content="summary_large_image">
     <style>
